--- a/src/views/About/About.module.css
+++ b/src/views/About/About.module.css
@@ -1,10 +1,10 @@
 .section {
-    width: 100%;
-    height: 100%;
-    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: auto;
     gap: 2rem;
 }
 
@@ -19,18 +19,16 @@
 @media screen and (max-width: 1280px) {
 
     .section {
-        height: 100vh;
         flex-direction: column-reverse;
-        margin-top: 12rem;
-
+        height: 800px;
+        margin-bottom: 1rem;
+        margin-top: 2rem;
     }
 
     .container {
         text-align: center;
         width: 90%;
         margin: auto;
-        margin-bottom: 5rem;
-        margin-top: 7rem;
     }
 
 }
