--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props;
 import "../styles/globals.css";
 ---
 
-<html lang="es" class="dark">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/dglogobrand.svg" />
