--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -5,7 +5,7 @@
         class="p-2 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#0001] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#0001] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
     >
         <svg
-            xmlns="http://www.w3.org/2000/svg"
+            xmlns="../../"
             width="20"
             height="20"
             viewBox="0 0 24 24"
@@ -99,7 +99,7 @@
         <li>
             <a
                 class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
-                href="https://linkedin.com/in/fdaniel-gomez"
+                href="https://www.linkedin.com/in/dami-gonzalez/"
                 target="_blank"
             >
                 <svg
@@ -123,7 +123,7 @@
         <li>
             <a
                 class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
-                href="https://github.com/devenapuros"
+                href="https://github.com/nangonz"
                 target="_blank"
             >
                 <svg
@@ -141,55 +141,6 @@
                     ></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg
                 >
                 Github</a
-            >
-        </li>
-        <li>
-            <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
-                href="https://instagram.com/devenapuros"
-                target="_blank"
-            >
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
-                    ></rect><path
-                        d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
-                    ></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                </svg>
-                Instagram
-            </a>
-        </li>
-        <li>
-            <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
-                href="https://dribbble.com/devenapuros"
-                target="_blank"
-            >
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><circle cx="12" cy="12" r="10"></circle><path
-                        d="M19.13 5.09C15.22 9.14 10 10.44 2.25 10.94"
-                    ></path><path d="M21.75 12.84c-6.62-1.41-12.14 1-16.38 6.32"
-                    ></path><path d="M8.56 2.75c4.37 6 6 9.42 8 17.72"
-                    ></path></svg
-                >
-                Dribbble</a
             >
         </li>
     </ul>
