change import statement of images served at the root path

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
 import Logo from "./logo.astro";
-import henry from "../../public/education/soyHenry.webp"
-import footerPic from "../../public/footerPic.webp"
+import henry from "/education/soyHenry.webp"
+import footerPic from "/footerPic.webp"
 ---
 
 <footer
