--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -1,5 +1,5 @@
 ---
-import logoAstro from "../../public/icons/astro.svg"
+import logoAstro from "/icons/astro.svg"
 ---
 <div class="h-[70px] w-[70px] bg-light-fondo-primary rounded-md p-2 flex items-center">
     <img src={logoAstro} alt="logo">
