delete curriculum pdf file and replace it for drive shared link

--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -22,7 +22,7 @@ import logoNan from "/dglogobrand.svg"
     </div>
     <div class="flex items-center gap-2 sm:gap-6">
         <a
-            href="/DamianGonzalez_CV.pdf"
+            href="https://drive.google.com/file/d/1kCMxX-9eCDAw1ua2HlPda7Em3Pv-SkO3/view?usp=sharing"
             target="_blank"
             class="sm:w-40 justify-center p-3 pr-4 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary bg-[#0001] dark:bg-[#fff1] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
         >
