add wiggle animation to dg logo

--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -1,5 +1,5 @@
 ---
-import logoNan from "/dglogobrand.svg"
+import logoNan from "/dglogoBlueGreen.svg"
 ---
 
 <section
@@ -7,7 +7,7 @@ import logoNan from "/dglogobrand.svg"
     id="home"
 >
     <div class="flex flex-col gap-2 text-center items-center justify-center">
-        <img class="w-[200px] h-[200px]" src={logoNan}>
+        <img class="w-[220px] h-[220px] animate-wiggle" src={logoNan}>
         <h1
             class="text-[1.1rem] sm:text-[1.6rem] text-light-gray-primary py-4 px-5 w-fit font-extrabold rounded-xl dark:text-dark-gray-primary"
         >
