change curriculum and contact buttons color and add shadow to logo

--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -7,24 +7,24 @@ import logoNan from "/dglogoBlueGreen.svg"
     id="home"
 >
     <div class="flex flex-col gap-2 text-center items-center justify-center">
-        <img class="w-[220px] h-[220px] animate-wiggle" src={logoNan}>
+        <img class="w-[220px] h-[220px] animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)]" src={logoNan}>
         <h1
             class="text-[1.1rem] sm:text-[1.6rem] text-light-gray-primary py-4 px-5 w-fit font-extrabold rounded-xl dark:text-dark-gray-primary"
         >
             Bienvenido!<span class="hi">👋</span> Soy Damian Gonzalez
         </h1>
         <p
-            class="text-[2.4rem] sm:text-[3.1rem] md:text-[4rem] font-black leading-[1] text-[#444] dark:text-[#f3f3f3]"
+            class="text-[2.4rem] sm:text-[3.1rem] md:text-[4rem] font-black leading-[1] text-[#434343] dark:text-[#ededed]"
             id="slogan0"
         >
-            Desarrollador Web Fullstack <span class="text-light-texto-primary">Javascript.</span>
+            Desarrollador Web <span><span class="text-[#434343] dark:text-[#ededed]">Fullstack </span> <span class="text-light-texto-primary">Javascript</span></span>
         </p>
     </div>
     <div class="flex items-center gap-2 sm:gap-6">
         <a
             href="https://drive.google.com/file/d/1kCMxX-9eCDAw1ua2HlPda7Em3Pv-SkO3/view?usp=sharing"
             target="_blank"
-            class="sm:w-40 justify-center p-3 pr-4 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary bg-[#0001] dark:bg-[#fff1] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
+            class="sm:w-40 justify-center p-3 pr-4 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-light-texto-secondary bg-[#bfff71] dark:bg-[#bfff71] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-light-texto-primary hover:text-light-fondo-primary dark:hover:text-light-fondo-primary"
         >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -50,7 +50,7 @@ import logoNan from "/dglogoBlueGreen.svg"
 
         <a
             href="#contact"
-            class="sm:w-40 justify-center p-3 pr-4 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary bg-[#0001] dark:bg-[#fff1] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
+            class="sm:w-40 justify-center p-3 pr-4 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-light-texto-secondary bg-[#bfff71] dark:bg-[#bfff71] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-light-texto-primary hover:text-light-fondo-primary dark:hover:text-light-fondo-primary"
         >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
