--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -7,9 +7,9 @@ import logoNan from "/dglogoBlueGreen.svg"
     id="home"
 >
     <div class="flex flex-col gap-2 text-center items-center justify-center">
-        <img class="w-[220px] h-[220px] animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)]" src={logoNan}>
+        <img class="w-[220px] h-[220px] my-2 animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)]" src={logoNan}>
         <h1
-            class="text-[1.1rem] sm:text-[1.6rem] text-light-gray-primary py-4 px-5 w-fit font-extrabold rounded-xl dark:text-dark-gray-primary"
+            class="text-[1rem] sm:text-[1.6rem] text-mainBlue py-8 px-8 w-fit font-bold rounded-xl dark:text-mainPink"
         >
             Bienvenido!<span class="hi">👋</span> Soy Damian Gonzalez
         </h1>
@@ -17,7 +17,13 @@ import logoNan from "/dglogoBlueGreen.svg"
             class="text-[2.4rem] sm:text-[3.1rem] md:text-[4rem] font-black leading-[1] text-[#434343] dark:text-[#ededed]"
             id="slogan0"
         >
-            Desarrollador Web <span><span class="text-[#434343] dark:text-[#ededed]">Fullstack </span> <span class="text-light-texto-primary">Javascript</span></span>
+            Desarrollador Web
+        </p>
+        <p
+            class="text-[2.4rem] sm:text-[3.1rem] md:text-[4rem] font-black leading-[1] text-[#434343] dark:text-[#ededed]"
+            id="slogan0"
+        >
+            <span class="text-[#434343] dark:text-[#ededed]">Frontend </span> <span class="text-light-texto-primary">Javascript</span>
         </p>
     </div>
     <div class="flex items-center gap-2 sm:gap-6">
