--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -9,7 +9,7 @@ import logoNan from "/dglogoBlueGreen.svg"
     <div class="flex flex-col gap-2 text-center items-center justify-center">
         <img class="w-[220px] h-[220px] my-2 animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)]" src={logoNan}>
         <h1
-            class="text-[1rem] sm:text-[1.6rem] text-mainBlue py-8 px-8 w-fit font-bold rounded-xl dark:text-mainPink"
+            class="welcomeGreeting drop-shadow-[2px_3px_2px_rgba(0,0,0,0.25)] dark:drop-shadow-[1px_2px_4px_rgba(19,154,255,0.75)] text-[1.5rem] sm:text-[2rem] text-mainBlue py-6 px-6 w-fit font-bold rounded-xl dark:text-[#00fa9a]"
         >
             Bienvenido!<span class="hi">👋</span> Soy Damian Gonzalez
         </h1>
