--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arizonia&display=swap');
+
 :root {
     --background: #fafbfc;
     --background_2: #fff;
@@ -85,4 +88,10 @@ body.dark {
 
 .carousel-viewport::-webkit-scrollbar {
     display: none;
+}
+
+.welcomeGreeting {
+  font-family: "Corinthia", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+  font-weight: 700;
+  font-style: bold;
 }
