change text background and hover color to topbar menu links

--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -27,16 +27,17 @@
     >
         <li>
             <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
+                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#jobs"
             >
                 <svg
+                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
                     xmlns="http://www.w3.org/2000/svg"
                     width="20"
                     height="20"
                     viewBox="0 0 24 24"
                     fill="none"
-                    stroke="#bfff71"
+                    stroke="#43a1f1"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
@@ -49,16 +50,17 @@
         </li>
         <li>
             <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
+                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#projects"
             >
                 <svg
+                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
                     xmlns="http://www.w3.org/2000/svg"
                     width="20"
                     height="20"
                     viewBox="0 0 24 24"
                     fill="none"
-                    stroke="#bfff71"
+                    stroke="#43a1f1"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
@@ -73,16 +75,17 @@
         </li>
         <li>
             <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
+                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#education"
             >
                 <svg
+                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
                     xmlns="http://www.w3.org/2000/svg"
                     width="20"
                     height="20"
                     viewBox="0 0 24 24"
                     fill="none"
-                    stroke="#bfff71"
+                    stroke="#43a1f1"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
@@ -97,17 +100,18 @@
         ></span>
         <li>
             <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
+                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="https://www.linkedin.com/in/dami-gonzalez/"
                 target="_blank"
             >
                 <svg
+                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
                     xmlns="http://www.w3.org/2000/svg"
                     width="20"
                     height="20"
                     viewBox="0 0 24 24"
                     fill="none"
-                    stroke="#bfff71"
+                    stroke="#43a1f1"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
@@ -121,17 +125,18 @@
         </li>
         <li>
             <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#0001] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-dark-texto-primary transition-colors"
+                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="https://github.com/nangonz"
                 target="_blank"
             >
                 <svg
+                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
                     xmlns="http://www.w3.org/2000/svg"
                     width="20"
                     height="20"
                     viewBox="0 0 24 24"
                     fill="none"
-                    stroke="#bfff71"
+                    stroke="#43a1f1"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
