--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -5,6 +5,7 @@
         class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#0001] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#0001] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
     >
         <svg
+            class="svgIcon"
             xmlns="../../"
             width="25"
             height="25"
@@ -150,26 +151,61 @@
     </ul>
 </div>
 <script>
-    const $menu = document.getElementById("topbar-menu");
     const $menuBtn = document.getElementById("topbar-menu-button");
+    const $svgBtn = document.querySelector(".svgIcon");
+    const $menu = document.getElementById("topbar-menu");
     const $menuItems = document.querySelectorAll(".menu-item");
     const $topbarMenuContainer = document.getElementById(
         "topbar-menu-container"
     );
 
-    $menuBtn.addEventListener("click", (event) => {
-        let isButtonActive = $menuBtn.getAttribute("data-active");
-        
-        $menuBtn.setAttribute(
-            "data-active",
-            isButtonActive === "true" ? "false" : "true"
-        );
+    $menuBtn.addEventListener("click", toggleMenu)
+    $svgBtn.addEventListener("click", toggleMenu)
 
-        $menu.setAttribute(
-            "data-active",
-            isButtonActive === "true" ? "false" : "true"
-        );
-    });
+    function toggleMenu(event: { stopPropagation: () => void; }) {
+        let isButtonActive = $menuBtn.getAttribute("data-active");
+        isButtonActive = isButtonActive === "true" ? "false" : "true";
+        
+        $menuBtn.setAttribute("data-active", isButtonActive);
+
+        $menu.setAttribute("data-active", isButtonActive);
+
+        if(isButtonActive === "true"){
+            $menuBtn.innerHTML = `
+                <svg 
+                    class="svgIcon"
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="1.6rem" height="1.6rem" 
+                    viewBox="0 0 24 24">
+                    <path 
+                        fill="#ff65c5" 
+                        d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6z"
+                    />
+                </svg>
+            `
+        } else {
+            $menuBtn.innerHTML = `
+                <svg
+                    class="svgIcon"
+                    xmlns="../../"
+                    width="25"
+                    height="25"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="#ff65c5"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                >
+                    <line x1="4" y1="12" x2="20" y2="12"></line>
+                    <line x1="4" y1="6" x2="20" y2="6"></line>
+                    <line x1="4" y1="18" x2="20" y2="18"></line>
+                </svg>
+            `
+        }
+        console.log($svgBtn)
+        event.stopPropagation()
+    };
 
     $menuItems.forEach((element) => {
         element.addEventListener("click", () => {
