--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -4,27 +4,26 @@
         id="topbar-menu-button"
         class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#0001] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#0001] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
     >
-        <svg
-            class="svgIcon"
-            xmlns="../../"
-            width="25"
-            height="25"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="#ff65c5"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            >
-                <line x1="4" y1="12" x2="20" y2="12"></line>
-                <line x1="4" y1="6" x2="20" y2="6"></line>
-                <line x1="4" y1="18" x2="20" y2="18"></line>
+        <svg class="svgIcon" xmlns="http://www.w3.org/2000/svg" 
+            width="1.5em" height="1.5em" viewBox="0 0 24 24">
+            <g fill="none">
+            <path d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-
+            .02.004l-.014-.004l-.071-.035c-.01-.004-.019-.001-.024.005l-
+            .004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-
+            .004l.104-.074l.012-.016l.004-.017l-.017-.427c-.002-.01-.009-
+            .017-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-
+            .003.011l.018.43l.005.012l.008.007l.201.093c.012.004.023 0 .029-.008l.004-
+            .014l-.034-.614c-.003-.012-.01-.02-.02-.022m-.715.002a.023.023 0 0 0-.027.006l-
+            .006.014l-.034.614c0 .012.007.02.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-
+            .43l-.003-.012l-.01-.01z"/>
+            <path fill="#ff65c5" d="M20 18a1 1 0 0 1 .117 1.993L20 20H4a1 1 0 0 1-.117-1.993L4 18zm0-7a1 1 0 1 1 0 2H4a1 1 0 1 1 0-2zm0-7a1 1 0 1 1 0 2H4a1 1 0 0 1 0-2z"/>
+            </g>
         </svg>
     </button>
     <ul
         data-active=""
         id="topbar-menu"
-        class="hidden data-[active=true]:block absolute left-0 top-10 w-52 z-10 rounded-lg border-[1px] border-[#43a1f1] dark:border-[#00fa9a] bg-[#fffa] dark:bg-[#181818bb] text-light-texto-secondary dark:text-dark-texto-secondary backdrop-blur-md overflow-hidden"
+        class="hidden data-[active=true]:block absolute left-0 top-12 w-52 z-10 rounded-lg border-[1px] border-[#43a1f1] dark:border-[#00fa9a] bg-[#fffa] dark:bg-[#181818bb] text-light-texto-secondary dark:text-dark-texto-secondary backdrop-blur-md overflow-hidden"
     >
         <li>
             <a
@@ -172,22 +171,19 @@
 
         if(isButtonActive === "true"){
             $menuBtn.innerHTML = `
-                <svg xmlns="http://www.w3.org/2000/svg" 
-                    class="svgIcon"
-                    width="1.6em" 
-                    height="1.6em" 
+                <svg xmlns="http://www.w3.org/2000/svg" class="svgIcon"
+                    width="1.5em" height="1.5em" 
                     viewBox="0 0 24 24">
                     <g fill="none" stroke="#ff65c5" 
                         stroke-linecap="round" 
-                        stroke-width="2"
-                    >
+                        stroke-width="2">
                     <path d="M5 5L19 5">
                         <animate fill="freeze" 
                             attributeName="d" 
                             begin="0.2s" 
                             dur="0.4s" 
                             values="M5 5L19 5;M5 5L19 19"
-                        />
+                    />
                     </path>
                     <path d="M5 12H19">
                         <animate fill="freeze" 
@@ -216,7 +212,7 @@
             $menuBtn.innerHTML = `
                 <svg xmlns="http://www.w3.org/2000/svg"
                     class="svgIcon"
-                    width="1.6em" height="1.6em" 
+                    width="1.5em" height="1.5em" 
                     viewBox="0 0 24 24">
                     <g fill="none" stroke="#ff65c5" 
                     stroke-linecap="round" stroke-width="2">
