--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -6,7 +6,7 @@ import "../styles/globals.css";
 <html lang="es">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/dglogobrand.svg" />
+        <link rel="icon" type="image/svg+xml" href="/dglogoBlueGreen.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
