--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -2,7 +2,7 @@
     <button
         data-active="false"
         id="topbar-menu-button"
-        class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#0001] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#0001] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
+        class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#cde7ff] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#cde7ff] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
     >
         <svg class="svgIcon" xmlns="http://www.w3.org/2000/svg" 
             width="1.5em" height="1.5em" viewBox="0 0 24 24">
